--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇷🇺 俄罗斯联邦-1.18MB/s(Youtube:不良林), server: 213.183.53.177, port: 9018, type: ss, cipher: aes-256-cfb, password: fG2artUmHfNT2cX7}
-  - {name: 🇷🇺 俄罗斯联邦-628.2KB/s(Youtube:不良林), server: 213.183.53.177, port: 9043, type: ss, cipher: aes-256-cfb, password: HSZuyJQcWe8dxNdF}
-  - {name: 🇨🇦 加拿大-699.5KB/s(Youtube:不良林), server: 134.195.196.231, port: 7002, type: ss, cipher: aes-256-gcm, password: RexnBgU7EV5ADxG}
-  - {name: 🇺🇸 美国-592.8KB/s(Youtube:不良林), server: hkbgp2.jiantian.xyz, port: 34532, type: trojan, password: 7cb64c49-2ce5-4fa6-9b79-9c02eb54735c, sni: hkbgp2.jiantian.xyz, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-216.8KB/s(Youtube:不良林), server: hkbgp1.jiantian.xyz, port: 14326, type: trojan, password: 7cb64c49-2ce5-4fa6-9b79-9c02eb54735c, sni: hkbgp1.jiantian.xyz, skip-cert-verify: true}
-  - {name: 🇷🇺 俄罗斯联邦-293.1KB/s(Youtube:不良林), server: 213.183.53.177, port: 9059, type: ss, cipher: aes-256-cfb, password: 9XwYyZsK8SNzQDtY}
-  - {name: 🇷🇺 俄罗斯联邦-661.8KB/s(Youtube:不良林), server: 213.183.53.177, port: 9003, type: ss, cipher: aes-256-cfb, password: JdmRK9gMEqFgs8nP}
-  - {name: 🇷🇺 俄罗斯联邦-1.36MB/s(Youtube:不良林), server: 213.183.53.177, port: 9093, type: ss, cipher: aes-256-cfb, password: wfLC2y7rzZyCmuyt}
-  - {name: 🇷🇺 俄罗斯联邦-340.6KB/s(Youtube:不良林), server: 213.183.53.177, port: 9060, type: ss, cipher: aes-256-cfb, password: ueLXVkvh4hckhErQ}
-  - {name: 🇨🇦 加拿大-242.9KB/s(Youtube:不良林), server: 134.195.196.231, port: 6697, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
+  - {name: 🇺🇸 美国-331.6KB/s(Youtube:不良林), server: s1.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s1.hazz.win, skip-cert-verify: true}
+  - {name: 🇰🇷 韩国-396.4KB/s(Youtube:不良林), server: 0001.kr.genzpn.com, port: 443, type: trojan, password: 4f4418cd-385c-4203-a323-1b4d2be8e495, sni: 0001.kr.genzpn.com, skip-cert-verify: true}
+  - {name: 🇨🇳 (已存活2天)中国-8.86MB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
+  - {name: 🇨🇦 加拿大-474.3KB/s(Youtube:不良林), server: 134.195.196.231, port: 9101, type: ss, cipher: aes-256-gcm, password: e4FCWrgpkji3QY}
+  - {name: 🇷🇺 俄罗斯联邦-187.9KB/s(Youtube:不良林), server: 213.183.53.177, port: 9003, type: ss, cipher: aes-256-cfb, password: JdmRK9gMEqFgs8nP}
+  - {name: 🇨🇦 加拿大-212.9KB/s(Youtube:不良林), server: 134.195.196.231, port: 8119, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
+  - {name: 🇨🇦 加拿大-649.9KB/s(Youtube:不良林), server: 134.195.196.231, port: 9102, type: ss, cipher: aes-256-gcm, password: e4FCWrgpkji3QY}
+  - {name: 🇷🇺 俄罗斯联邦-275.9KB/s(Youtube:不良林), server: 213.183.53.177, port: 9088, type: ss, cipher: aes-256-cfb, password: f8npKgNzdkss2ytn}
+  - {name: 🇨🇳 中国-222.4KB/s(Youtube:不良林), server: gy.ziqiyun.xyz, port: 47795, type: ss, cipher: chacha20-ietf-poly1305, password: 59836db8-6e5f-4b8b-aa1e-3963f9d9c923}
+  - {name: 🇨🇳 中国-239.8KB/s(Youtube:不良林), server: zh01lv5ge02.feiguayun.xyz, port: 36087, type: ss, cipher: aes-256-gcm, password: 6f8ebe83-8910-4106-9dc4-18a41cc20ed4}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇷🇺 俄罗斯联邦-1.18MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-628.2KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-699.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-592.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-216.8KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-293.1KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-661.8KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.36MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-340.6KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-242.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-331.6KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-396.4KB/s(Youtube:不良林)
+      - 🇨🇳 (已存活2天)中国-8.86MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-474.3KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-187.9KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-212.9KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-649.9KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-275.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-222.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-239.8KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇷🇺 俄罗斯联邦-1.18MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-628.2KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-699.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-592.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-216.8KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-293.1KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-661.8KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.36MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-340.6KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-242.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-331.6KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-396.4KB/s(Youtube:不良林)
+      - 🇨🇳 (已存活2天)中国-8.86MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-474.3KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-187.9KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-212.9KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-649.9KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-275.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-222.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-239.8KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇷🇺 俄罗斯联邦-1.18MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-628.2KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-699.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-592.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-216.8KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-293.1KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-661.8KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.36MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-340.6KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-242.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-331.6KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-396.4KB/s(Youtube:不良林)
+      - 🇨🇳 (已存活2天)中国-8.86MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-474.3KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-187.9KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-212.9KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-649.9KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-275.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-222.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-239.8KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇷🇺 俄罗斯联邦-1.18MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-628.2KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-699.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-592.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-216.8KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-293.1KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-661.8KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.36MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-340.6KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-242.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-331.6KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-396.4KB/s(Youtube:不良林)
+      - 🇨🇳 (已存活2天)中国-8.86MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-474.3KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-187.9KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-212.9KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-649.9KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-275.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-222.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-239.8KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇷🇺 俄罗斯联邦-1.18MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-628.2KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-699.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-592.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-216.8KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-293.1KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-661.8KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.36MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-340.6KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-242.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-331.6KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-396.4KB/s(Youtube:不良林)
+      - 🇨🇳 (已存活2天)中国-8.86MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-474.3KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-187.9KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-212.9KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-649.9KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-275.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-222.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-239.8KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇷🇺 俄罗斯联邦-1.18MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-628.2KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-699.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-592.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-216.8KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-293.1KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-661.8KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.36MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-340.6KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-242.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-331.6KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-396.4KB/s(Youtube:不良林)
+      - 🇨🇳 (已存活2天)中国-8.86MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-474.3KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-187.9KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-212.9KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-649.9KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-275.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-222.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-239.8KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇷🇺 俄罗斯联邦-1.18MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-628.2KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-699.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-592.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-216.8KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-293.1KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-661.8KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.36MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-340.6KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-242.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-331.6KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-396.4KB/s(Youtube:不良林)
+      - 🇨🇳 (已存活2天)中国-8.86MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-474.3KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-187.9KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-212.9KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-649.9KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-275.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-222.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-239.8KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
