--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇦 加拿大-357.2KB/s(Youtube:不良林), server: 134.195.196.231, port: 9102, type: ss, cipher: aes-256-gcm, password: e4FCWrgpkji3QY}
-  - {name: 🇳🇱 荷兰-490.2KB/s(Youtube:不良林), server: nl1.nodegz.top, port: 443, type: trojan, password: c3534f9d-b2ff-316b-9aac-5fee852d9a21, sni: nl1.nodegz.top, skip-cert-verify: true}
-  - {name: 🇨🇦 加拿大-421.4KB/s(Youtube:不良林), server: 134.195.196.231, port: 9101, type: ss, cipher: aes-256-gcm, password: e4FCWrgpkji3QY}
-  - {name: 🇨🇦 加拿大-332.6KB/s(Youtube:不良林), server: 134.195.196.231, port: 7002, type: ss, cipher: aes-256-gcm, password: RexnBgU7EV5ADxG}
-  - {name: 🇩🇪 德国-763.8KB/s(Youtube:不良林), server: s4.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s4.hazz.win, skip-cert-verify: true}
-  - {name: 🇨🇦 加拿大-326.4KB/s(Youtube:不良林), server: 134.195.196.231, port: 3306, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
-  - {name: 🇨🇦 加拿大-529.5KB/s(Youtube:不良林), server: 134.195.196.231, port: 6697, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
-  - {name: 🇨🇦 加拿大-302.2KB/s(Youtube:不良林), server: 134.195.196.231, port: 5000, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
-  - {name: 🇨🇳 中国-443.2KB/s(Youtube:不良林), server: gy.ziqiyun.xyz, port: 47795, type: ss, cipher: chacha20-ietf-poly1305, password: 59836db8-6e5f-4b8b-aa1e-3963f9d9c923}
-  - {name: 🇳🇱 荷兰-217.3KB/s(Youtube:不良林), server: 213.183.59.214, port: 9008, type: ss, cipher: aes-256-cfb, password: y9VURyNzJWNRYEGQ}
+  - {name: 🇨🇦 加拿大-840.8KB/s(Youtube:不良林), server: 134.195.196.231, port: 6697, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
+  - {name: 🇨🇦 加拿大-457.6KB/s(Youtube:不良林), server: 134.195.196.231, port: 9101, type: ss, cipher: aes-256-gcm, password: e4FCWrgpkji3QY}
+  - {name: 🇨🇦 加拿大-622.2KB/s(Youtube:不良林), server: 134.195.196.231, port: 9102, type: ss, cipher: aes-256-gcm, password: e4FCWrgpkji3QY}
+  - {name: 🇨🇦 加拿大-415.9KB/s(Youtube:不良林), server: 134.195.196.231, port: 8118, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
+  - {name: 🇨🇳 中国-2.42MB/s(Youtube:不良林), server: 116.129.253.130, port: 3389, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-2.22MB/s(Youtube:不良林), server: 116.129.253.130, port: 3389, type: trojan, password: e37c6d7efa845d60, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-2.28MB/s(Youtube:不良林), server: 116.129.254.47, port: 3389, type: trojan, password: a170b44c2dfac9e6, skip-cert-verify: true}
+  - {name: 🇷🇺 俄罗斯联邦-349.8KB/s(Youtube:不良林), server: 213.183.53.177, port: 9007, type: ss, cipher: aes-256-cfb, password: kSPmvwdFzGMMW5pY}
+  - {name: 🇷🇺 俄罗斯联邦-476.5KB/s(Youtube:不良林), server: 213.183.53.177, port: 9084, type: ss, cipher: aes-256-cfb, password: c3NtHJ5ujV2tGDfj}
+  - {name: 🇷🇺 俄罗斯联邦-489.5KB/s(Youtube:不良林), server: 213.183.53.177, port: 9057, type: ss, cipher: aes-256-cfb, password: wjTugX3ZtHMB9c3Z}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇦 加拿大-357.2KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-490.2KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-421.4KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-332.6KB/s(Youtube:不良林)
-      - 🇩🇪 德国-763.8KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-326.4KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-529.5KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-302.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-443.2KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-217.3KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-840.8KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-457.6KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-622.2KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-415.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.42MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.22MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.28MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-349.8KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-476.5KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-489.5KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇦 加拿大-357.2KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-490.2KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-421.4KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-332.6KB/s(Youtube:不良林)
-      - 🇩🇪 德国-763.8KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-326.4KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-529.5KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-302.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-443.2KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-217.3KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-840.8KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-457.6KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-622.2KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-415.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.42MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.22MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.28MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-349.8KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-476.5KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-489.5KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇦 加拿大-357.2KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-490.2KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-421.4KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-332.6KB/s(Youtube:不良林)
-      - 🇩🇪 德国-763.8KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-326.4KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-529.5KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-302.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-443.2KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-217.3KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-840.8KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-457.6KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-622.2KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-415.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.42MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.22MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.28MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-349.8KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-476.5KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-489.5KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇦 加拿大-357.2KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-490.2KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-421.4KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-332.6KB/s(Youtube:不良林)
-      - 🇩🇪 德国-763.8KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-326.4KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-529.5KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-302.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-443.2KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-217.3KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-840.8KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-457.6KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-622.2KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-415.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.42MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.22MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.28MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-349.8KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-476.5KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-489.5KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇦 加拿大-357.2KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-490.2KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-421.4KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-332.6KB/s(Youtube:不良林)
-      - 🇩🇪 德国-763.8KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-326.4KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-529.5KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-302.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-443.2KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-217.3KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-840.8KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-457.6KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-622.2KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-415.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.42MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.22MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.28MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-349.8KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-476.5KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-489.5KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇦 加拿大-357.2KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-490.2KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-421.4KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-332.6KB/s(Youtube:不良林)
-      - 🇩🇪 德国-763.8KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-326.4KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-529.5KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-302.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-443.2KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-217.3KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-840.8KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-457.6KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-622.2KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-415.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.42MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.22MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.28MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-349.8KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-476.5KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-489.5KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇦 加拿大-357.2KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-490.2KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-421.4KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-332.6KB/s(Youtube:不良林)
-      - 🇩🇪 德国-763.8KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-326.4KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-529.5KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-302.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-443.2KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-217.3KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-840.8KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-457.6KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-622.2KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-415.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.42MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.22MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.28MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-349.8KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-476.5KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-489.5KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
