--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇦 加拿大-840.8KB/s(Youtube:不良林), server: 134.195.196.231, port: 6697, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
-  - {name: 🇨🇦 加拿大-457.6KB/s(Youtube:不良林), server: 134.195.196.231, port: 9101, type: ss, cipher: aes-256-gcm, password: e4FCWrgpkji3QY}
-  - {name: 🇨🇦 加拿大-622.2KB/s(Youtube:不良林), server: 134.195.196.231, port: 9102, type: ss, cipher: aes-256-gcm, password: e4FCWrgpkji3QY}
-  - {name: 🇨🇦 加拿大-415.9KB/s(Youtube:不良林), server: 134.195.196.231, port: 8118, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
-  - {name: 🇨🇳 中国-2.42MB/s(Youtube:不良林), server: 116.129.253.130, port: 3389, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-2.22MB/s(Youtube:不良林), server: 116.129.253.130, port: 3389, type: trojan, password: e37c6d7efa845d60, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-2.28MB/s(Youtube:不良林), server: 116.129.254.47, port: 3389, type: trojan, password: a170b44c2dfac9e6, skip-cert-verify: true}
-  - {name: 🇷🇺 俄罗斯联邦-349.8KB/s(Youtube:不良林), server: 213.183.53.177, port: 9007, type: ss, cipher: aes-256-cfb, password: kSPmvwdFzGMMW5pY}
-  - {name: 🇷🇺 俄罗斯联邦-476.5KB/s(Youtube:不良林), server: 213.183.53.177, port: 9084, type: ss, cipher: aes-256-cfb, password: c3NtHJ5ujV2tGDfj}
-  - {name: 🇷🇺 俄罗斯联邦-489.5KB/s(Youtube:不良林), server: 213.183.53.177, port: 9057, type: ss, cipher: aes-256-cfb, password: wjTugX3ZtHMB9c3Z}
+  - {name: 🇨🇦 加拿大-651.1KB/s(Youtube:不良林), server: 134.195.196.231, port: 6697, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
+  - {name: 🇨🇳 (已存活2天)中国-3.40MB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-3.18MB/s(Youtube:不良林), server: 116.129.254.29, port: 3389, type: trojan, password: f6f2072a2e4cfc91, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-390.6KB/s(Youtube:不良林), server: hkbgp1.jiantian.xyz, port: 14326, type: trojan, password: 7cb64c49-2ce5-4fa6-9b79-9c02eb54735c, sni: hkbgp1.jiantian.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-2.99MB/s(Youtube:不良林), server: 116.129.254.47, port: 3389, type: trojan, password: ca4596fb9bc63cf2, skip-cert-verify: true}
+  - {name: 🇷🇺 俄罗斯联邦-730.8KB/s(Youtube:不良林), server: 331tw.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1c08f35bdafe74a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 331tw.fans8.xyz}}
+  - {name: 🇺🇸 美国-1.03MB/s(Youtube:不良林), server: fhcamd1.gaox.ml, port: 443, type: trojan, password: e23f408a-012e-4030-8b31-02022031cb50, sni: fhcamd1.gaox.ml, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-1.94MB/s(Youtube:不良林), server: 67us01.fans8.xyz, port: 443, type: trojan, password: 6ba87c27-a1f0-4702-9c4e-3cba6fbd7e93, sni: 67us01.fans8.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-4.45MB/s(Youtube:不良林), server: gy.ziqiyun.xyz, port: 47795, type: ss, cipher: chacha20-ietf-poly1305, password: 59836db8-6e5f-4b8b-aa1e-3963f9d9c923}
+  - {name: 🇬🇧 英国-344.3KB/s(Youtube:不良林), server: jgwld3.gaox.ml, port: 443, type: trojan, password: 71b55a84-3fac-4458-abff-eaad79219c91, sni: jgwld3.gaox.ml, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇦 加拿大-840.8KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-457.6KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-622.2KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-415.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.42MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.22MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.28MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-349.8KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-476.5KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-489.5KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-651.1KB/s(Youtube:不良林)
+      - 🇨🇳 (已存活2天)中国-3.40MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.18MB/s(Youtube:不良林)
+      - 🇺🇸 美国-390.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.99MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-730.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.03MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.94MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.45MB/s(Youtube:不良林)
+      - 🇬🇧 英国-344.3KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇦 加拿大-840.8KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-457.6KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-622.2KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-415.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.42MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.22MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.28MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-349.8KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-476.5KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-489.5KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-651.1KB/s(Youtube:不良林)
+      - 🇨🇳 (已存活2天)中国-3.40MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.18MB/s(Youtube:不良林)
+      - 🇺🇸 美国-390.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.99MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-730.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.03MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.94MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.45MB/s(Youtube:不良林)
+      - 🇬🇧 英国-344.3KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇦 加拿大-840.8KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-457.6KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-622.2KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-415.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.42MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.22MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.28MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-349.8KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-476.5KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-489.5KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-651.1KB/s(Youtube:不良林)
+      - 🇨🇳 (已存活2天)中国-3.40MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.18MB/s(Youtube:不良林)
+      - 🇺🇸 美国-390.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.99MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-730.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.03MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.94MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.45MB/s(Youtube:不良林)
+      - 🇬🇧 英国-344.3KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇦 加拿大-840.8KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-457.6KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-622.2KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-415.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.42MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.22MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.28MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-349.8KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-476.5KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-489.5KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-651.1KB/s(Youtube:不良林)
+      - 🇨🇳 (已存活2天)中国-3.40MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.18MB/s(Youtube:不良林)
+      - 🇺🇸 美国-390.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.99MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-730.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.03MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.94MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.45MB/s(Youtube:不良林)
+      - 🇬🇧 英国-344.3KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇦 加拿大-840.8KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-457.6KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-622.2KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-415.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.42MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.22MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.28MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-349.8KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-476.5KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-489.5KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-651.1KB/s(Youtube:不良林)
+      - 🇨🇳 (已存活2天)中国-3.40MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.18MB/s(Youtube:不良林)
+      - 🇺🇸 美国-390.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.99MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-730.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.03MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.94MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.45MB/s(Youtube:不良林)
+      - 🇬🇧 英国-344.3KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇦 加拿大-840.8KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-457.6KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-622.2KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-415.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.42MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.22MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.28MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-349.8KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-476.5KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-489.5KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-651.1KB/s(Youtube:不良林)
+      - 🇨🇳 (已存活2天)中国-3.40MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.18MB/s(Youtube:不良林)
+      - 🇺🇸 美国-390.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.99MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-730.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.03MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.94MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.45MB/s(Youtube:不良林)
+      - 🇬🇧 英国-344.3KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇦 加拿大-840.8KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-457.6KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-622.2KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-415.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.42MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.22MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.28MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-349.8KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-476.5KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-489.5KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-651.1KB/s(Youtube:不良林)
+      - 🇨🇳 (已存活2天)中国-3.40MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.18MB/s(Youtube:不良林)
+      - 🇺🇸 美国-390.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.99MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-730.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.03MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.94MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.45MB/s(Youtube:不良林)
+      - 🇬🇧 英国-344.3KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
